[package]
name = "radium"
version = "0.1.0"
edition = "2021"

[lib]
name = "rad"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.0"
log = "0.4.19"
wgpu = "0.17.0"
winit = "0.28.6"
 
