[package]
name = "radium"
version = "0.1.0"
edition = "2021"

[lib]
name = "rad"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1.0.72"
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.0"
image = "0.24.7"
log = "0.4.19"
wgpu = "0.17.0"
winit = "0.28.6"
 
