[package]
name = "radium"
version = "0.1.0"
edition = "2021"

[lib]
name = "rad"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1.0.72"
bytemuck = { version = "1.13.1", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.10.0"
image = "0.24.7"
log = "0.4.19"
tobj = { version = "4.0.0", features = ["async"] }
tokio = { version = "1.32.0", features = ["fs"] }
web-sys = { version = "0.3.64", features = ["Document", "Window", "Element", "Location"] }
wgpu = "0.17.0"
winit = "0.28.6"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
 
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" } 
